# CubeSolver

./: .gitignore  CMakeLists.txt  README.md
src/: cube.cpp  cube.h  cuberenderer.cpp  cuberenderer.h  mainwindow.cpp  mainwindow.h
